The file [[:Image:Miskolc_montage.JPG]] has been removed, as it has been deleted by [[:commons:User:Denniss]]: ''[[commons:Commons:Deletion requests/Files uploaded by Uzo19]]: The files were created with a lot of different camera models (according to E...

--- a/Miskolc.mw
+++ b/Miskolc.mw
@@ -1,6 +1,6 @@
 {{Liin 
  | nimi = Miskolc
- | pilt = [[Pilt:Miskolc montage.JPG|250px]]
+ | pilt = 
  | pildiallkiri = 
  | maa = Ungari
  | suurus = 237
