*Empty MediaWiki Message*

--- a/Bukan.mw
+++ b/Bukan.mw
@@ -1,4 +1,6 @@
-'''Bukan''' om liin Iraanin, tä om [[Azarbijan provintsi]] pääliin. 
+'''Bukan''' om liin [[Iraan]]in Õdagu-Asõrbaidžani provintsin. Tä om Bukani maakunna pääliin. 
+
+[[Katõgooria:Iraani liinaq]]
 
 [[fa:بوکان]]
 [[en:bukan]]
