--- a/Katõgooria:Iraani_liinaq.mw
+++ b/Katõgooria:Iraani_liinaq.mw
@@ -4,7 +4,7 @@
 
 <!--Katõgooriaq-->
 <!--Interwikis-->
-{{Commonscat|Cities in Iran}}
+<!--{{Commonscat|Cities in Iran}}-->
 
 [[Katõgooria:Liinaq riike perrä]]
 [[Katõgooria:Iraan|Liinaq]]
