*Empty MediaWiki Message*

--- a/Timur.mw
+++ b/Timur.mw
@@ -1,6 +1,6 @@
 {{Elokäük 
  | nimi = Timur
- | pilt =
+ | pilt = Stamps of Uzbekistan, 2007-37.jpg
  | sünnüaig = [[6. mahlakuu päiv]] [[1336]]
  | sünnüpaik = Šahrisabz, [[Usbekistan]]
  | kuulmisaig = [[18. radokuu päiv]] [[1405]]
@@ -11,5 +11,3 @@
 '''Timur''' vai '''Tamerlan''' (1336-1405) oll' [[mongoliq|mongoli]] peritollo [[Turkmeeniä|Turkestani]] väejuht, kiä 14. aastagasaal vallut' ärq suurõ jao Õdagu- ja [[Kesk-Aasia]]st nink pand' alossõ umanimelidsele valitsõjasuulõ.
 
 [[Katõgooria:Turkmeeniä inemiseq]]
-
-[[ml:തിമൂര്‍]]
