*Empty MediaWiki Message*

--- a/Antigua_ja_Barbuda.mw
+++ b/Antigua_ja_Barbuda.mw
@@ -2,7 +2,7 @@
 Nimi=Antigua ja Barbuda|
 Genitiiv=Antigua ja Barbuda|
 Lipp=Pilt:Flag of Antigua and Barbuda.svg|
-Vapp=Pilt:|
+Vapp=Pilt:Coat of arms of Antigua and Barbuda.svg|
 Kaart=Pilt:LocationAntiguaAndBarbuda.png|
 Riigikiil=[[inglüse kiil]]|
 Pääliin=[[Saint John's]]|
