*Empty MediaWiki Message*

--- a/Pelli_võrrand.mw
+++ b/Pelli_võrrand.mw
@@ -1,4 +1,4 @@
-[[Arvoteooria]]s '''Pelli võrrand''' on [[Diofantline võrrand]] ''x''<sup>2</sup> - ''dy''<sup>2</sup> = 1.
+[[Arvoteooria]]s '''Pelli võrrand''' on [[Diofantilinõ võrrand]] ''x''<sup>2</sup> - ''dy''<sup>2</sup> = 1.
 
 
 [[Katõgooria:Arvoteooria]]
