--- a/Jalgratas.mw
+++ b/Jalgratas.mw
@@ -1,5 +1,4 @@
-
-
+[[Image:LeMond Bicycle, Ludlow MA.jpg|thumb|right|250px]]
 '''Jalgratas''' om katõ (harva kolmõ) [[ratas|rattaga]] [[sõidoriist]], minka pand pedaalõ väntämisega liikma inemine. Jalgratas märgiti vällä 19. aastagasaal ja täämbädsel pääväl om näid tarvitusõl nii miljard tükkü.
 
 [[Katõgooria:Sõidoriistaq]]
