*Empty MediaWiki Message*

--- a/Fermat'_väikene_teorem.mw
+++ b/Fermat'_väikene_teorem.mw
@@ -1,4 +1,4 @@
-[[Arvoteooria]]s '''Fermat' väikene teorem''' on matematline teorem, miä ütles, et ku algarv ''p'' ei jagaq terveht arvo ''a'', sõs 
+[[Arvoteooria]]n '''Fermat' väikene teorem''' on matõmaatlinõ teorem, miä ütles, et ku algarv ''p'' ei jagaq terveht arvo ''a'', sõs 
 :<math> a^{p-1}\equiv 1 \pmod p.</math> 
 
 [[Katõgooria: Arvoteooria]]
