*Empty MediaWiki Message*

--- a/Algarvoteorem.mw
+++ b/Algarvoteorem.mw
@@ -1,7 +1,7 @@
-[[Arvoteooria]]s '''algarvoteorem''' on teorem
+[[Arvoteooria]]n '''algarvoteorem''' om teorem, miä ütles, et 
 
 :<math>\lim_{x\to\infty}\frac{\pi(x)}{x/\ln(x)}=1.</math>
 
-Teoreman on tõestanud [[Jacques Hadamard]] ja [[Charles de la Vallée Poussin]]. 
+Teoremi ommaq tõõstanuq [[Jacques Hadamard]] ja [[Charles de la Vallée Poussin]]. 
 
 [[Katõgooria:Arvoteooria]]
