*Empty MediaWiki Message*

--- a/Algarvoteorem.mw
+++ b/Algarvoteorem.mw
@@ -5,3 +5,5 @@
 Teoremi ommaq tõõstanuq [[Jacques Hadamard]] ja [[Charles de la Vallée Poussin]]. 
 
 [[Katõgooria:Arvoteooria]]
+
+[[et:Prime number theorem]]
