*Empty MediaWiki Message*

--- a/Algarvoteorem.mw
+++ b/Algarvoteorem.mw
@@ -6,4 +6,4 @@ Teoremi ommaq tõõstanuq [[Jacques Hadamard]] ja [[Charles de la Vallée Poussi
 
 [[Katõgooria:Arvoteooria]]
 
-[[et:Prime number theorem]]
+[[en:Prime number theorem]]
