*Empty MediaWiki Message*

--- a/Analüütiline_arvoteooria.mw
+++ b/Analüütiline_arvoteooria.mw
@@ -1,4 +1,4 @@
-'''Arvoteooria''' om [[matõmaatiga]] haro, miä uur [[arv]]õ (innekõkkõ [[terveharv|tervidearvõ]]) umahuisi analüüsi metodeil. 
+'''Analüütiline arvoteooria''' om [[matõmaatiga]] haro, miä uur [[arv]]õ (innekõkkõ [[terveharv|tervidearvõ]]) umahuisi analüüsi metodeil. 
 
 ==Kaeq viil==
 [[Algarv]]
