*Empty MediaWiki Message*

--- a/Vinne_kiil.mw
+++ b/Vinne_kiil.mw
@@ -1,5 +1,5 @@
 {{Kiil
-| nimi  = Vinne kiil (''Русский язык'')
+| nimi  = Vinne kiil (''русский язык'')
 | kon kõnõldas  = [[Vinnemaa]]l, [[Ukraina]]n, [[Valgõvinne]]n, [[Läti]]n, [[Eesti]]n jm
 | kõnõlõjidõ arv  = 278 mill'onat
 | kon om ammõtlinõ = [[Vinnemaa]]l, [[Valgõvinne]]n, [[Kasastan]]in jm
