{{commonscat|Alfons Rebane}}

--- a/Rebase_Alfons.mw
+++ b/Rebase_Alfons.mw
@@ -12,4 +12,5 @@
 
 '''Rebase Alfons Vilhelm Robert''' ('''Alfons Vilhelm Robert Rebane''', 1908-1976) oll' Eesti sõaväeläne, kolonel (aastagast 1945). Tä oll' Eesti üts kõgõ legendaarsõmb väejuht.
 
+{{commonscat|Alfons Rebane}}
 [[Katõgooria:Eesti inemiseq]]
