--- a/Võro_kiil.mw
+++ b/Võro_kiil.mw
@@ -18,8 +18,7 @@
 
 '''Võro kiil''' om [[soomõ-ugri keeleq|soomõ-ugri kiili]] [[õdagumeresoomõ keeleq|õdagumeresoomõ]] lõunarühmä [[kiil]]. Võro keele lähkümbäq sugulasõq ommaq tõõsõq [[lõunaeesti kiil|lõunaeesti keeleq]], [[eesti kiil]], [[liivi kiil|liivi]] ja [[vad'a kiil|vad'a]] kiil. Võro kiilt või pitäq Eesti põlitsõs piirkundlidsõs keeles vai [[regionaalkiil|regionaalkeeles]]. Tõisi arvamiisi perrä om võrokõisi kiil lõunaeesti keele vai eesti  keele lõunaeesti murdõrühmä vai päämurdõ Võro [[murrõq]]. Võro kiil om lõunaeesti keelist kõgõ suurõmb, täl om 74 499<ref> [[Statistikaamet]] [http://pub.stat.ee/px-web.2001/Dialog/varval.asp?ma=RLE07&lang=2]</ref> kõnõlõjat põhilidsõlt Lõuna-Eestin, vanal [[Võromaa]]l, mink ala käü parhillanõ Võro ja Põlva maakund ni osa Tarto ja Valga maakunnast (Karula, Harglõ, Urvastõ, Rõugõ, Kanepi, Põlva, Räpinä ja Vahtsõliina [[kihlkund]]). Küländ hulga võro keele mõistjit om seo ilma aigo ka [[Tarto]]n, [[Talliin]]an ja muial Eestin.
 
-== Aolugu ==
-Võro kiil om ütes vanõmbas õdagumeresoomõ hõimukeeles peetü lõunaeesti hõimukeele perrätulija. Tõõsõq täämbädse ao lõunaeesti keeleq ommaq [[mulgi kiil|mulgi]], [[tarto kiil|tarto]] ja [[seto kiil]]. Perämäne lätt külh võro keelega küländ pall'o kokko, a et setodõl ommaq alalõ väega esiqmuudu muistidsõq kombõq ja kimmäs hindätiidmine, sis kõnõldas võro ja seto keelest eräle. Eesti murdõtiidüse traditsioonilidsõ arvamisõ perrä om seto kiil [[murrak]] vai murragurühm, a tõõsõq lõunaeesti keeleq [[eesti kiil|eesti keele]] lõunaeesti murdõrühmä vai päämurdõ [[murrõq|murdõq]]. Tartlaisiga om võrokõisil olnu mitusada aastakka ütine [[lõunaeesti kiräkiil]], mink üts vanõmbit ja tähtsämpi kiräliidsi mälehtüsmärke om [[1686]]. aastagal ilmunu ''Wastne Testament''. [[19. aastagasada|19.]] ja [[20. aastagasada|20. aastagasaal]] naati jo tävve tiidmisega kirotama võro keelen. [[1885]]. aastagast om päri võrokeeline aabits, Johann Hurda ''Wastne Wõro keeli ABD raamat''. [[1990]]. aastagist pruugitas [[võro kiräkiil]]t. Võro ja seto kiil ommaq tõisist lõunaeesti keelist vanamoodulidsõmbaq ja põh'aeesti keelest veidemb mõotõduq. Innembide om naid kõnõld ka kavvõmban hummogu ja lõuna puul, parhillaidsi [[Läti]] ja [[Vinnemaa]] maiõ pääl.
+== Aolugu == Võro kiil om ütes vanõmbas õdagumeresoomõ hõimukeeles peetü lõunaeesti hõimukeele perrätulija. Tõõsõq täämbädse ao lõunaeesti keeleq ommaq [[mulgi kiil|mulgi]], [[tarto kiil|tarto]] ja [[seto kiil]]. Perämäne lätt külh võro keelega küländ pall'o kokko, a et setodõl ommaq alalõ väega esiqmuudu muistidsõq kombõq ja kimmäs hindätiidmine, sis kõnõldas võro ja seto keelest eräle. Eesti murdõtiidüse traditsioonilidsõ arvamisõ perrä om seto kiil [[murrak]] vai murragurühm, a tõõsõq lõunaeesti keeleq [[eesti kiil|eesti keele]] lõunaeesti murdõrühmä vai päämurdõ [[murrõq|murdõq]]. Tartlaisiga om võrokõisil olnu mitusada aastakka ütine [[lõunaeesti kiräkiil]], mink üts vanõmbit ja tähtsämpi kiräliidsi mälehtüsmärke om [[1686]]. aastagal ilmunu ''Wastne Testament''. [[19. aastagasada|19.]] ja [[20. aastagasada|20. aastagasaal]] naati jo tävve tiidmisega kirotama võro keelen. [[1885]]. aastagast om päri võrokeeline aabits, Jo
 
 == Parhillanõ sais ==
 Võro keele ja kultuuri kaitsõs, uurmisõs ja edendämises luudi [[1995]]. aastagal riigiasotus [[Võro Instituut]], miä kõrraldas ka võro keele oppamist ni pruuv võro kiilt ütiskunnan avvo sisse nõstaq ja vahtsõst laembahe pruuki saiaq. Võro kiilt opatas parhillaq kõrra nädälin 26 koolin, a olõ-i üttegi kuuli egaq klassi, kon võro kiil olõsiq oppamisõ keeles. Korgõkooli jaon saa võro kiilt oppiq [[Tarto Ülikool]]in. Ainugõnõ peris võrokeeline aoleht [[Uma Leht]] ilmus kats kõrda kuun. Võro keele ammõtlinõ tunnistaminõ olõ-i viil lõpulõ joudnuq. 2004. aastagal luudi külh tuu jaos eräle valitsuskomisjon, a tuu olõ-i siiäniq võro keele õiguslidsõ staatusõ küsümüst lahendanuq. Võro keele staatusõ üle om eesti meediän aoldõ tulitsõhe vaiõld. Kuiki võro keele kaitsõs om alostõt mitmit tegemiisi ja luud Võro Instituut, om võro kiil iks eesti keele puult tõsitsõhe ohostõt. 1998. aastagal tettü arvamisküsümise perrä kõnõlõs võro kiilt külh rohkõmb vai veidemb 90% ja kõik aig 45% võro keeleala inemiisist, a väega veidüq om latsi, kinkalõ võro kiil om edimäne kiil ja sääntsit latsõvanõmbit, kiä ummi latsigaq kõik aig võro kiilt kõnõlõsõq. Seo ilma aigo tunnõtas võro kiilt põhilidsõlt ku [[Võro kirändüs|kirändüse]], [[Võro tiatri|tiatri]], [[Võro rahvalaul|rahva]]- ja [[Võro popmuusiga|popmuusiga]] kiilt. 2004. aastaga Eurovisiooni lauluvõistlusõl Istambulin oll' Eestit iist välän andsambli "[[Neiokõsõ]]q" võrokeelidse lauluga "Tii".
