--- a/Arvoteooria.mw
+++ b/Arvoteooria.mw
@@ -80,7 +80,7 @@ Raamatun "[[Disquisitiones Arithmeticae]]" (1798), tõõst' [[Gauss]] (1777–18
 == Haroq ==
 === Arvoteooria alostus ===
 
-'''Arvoteooria alostusõn''' uuritas tervitarvõ ilma tõisi matõmaatiga harrõ teknikat tarvitamalda. Tahtõ kuulusõq näütüses tervidearvõ [[jagonõminõ]], [[Eukleidese algoritm]] [[kõgõ suurõmb ütine jagaja|kõgõ suurõmba ütidse jagaja]] löüdmises, [[algarvoq]], [[tävvelidseq arvoq]] ja [[kongruents|kongruendsiq]]. Sjoo haro tähtsämbide vällälöüdüisi hulgan ommaq [[Fermat' väikene teorem]], [[Euleri teorem]], [[Hiina jäägiteorem]], ja [[ruutvastavussäädüs]]. Viil uuritas arvoteooria alostusõn [[Möbiusõ säädäng]]u, [[Euleri fii-säädäng]]u, [[tervidearvõ rong]]õ, [[faktoriaal]]õ ja [[Fibonacci arv]]õ umahuisi.
+'''Arvoteooria alostusõn''' uuritas tervitarvõ ilma tõisi matõmaatiga harrõ teknikat tarvitamalda. Tahtõ kuulusõq näütüses tervidearvõ [[jagonõminõ]], [[Eukleidese algoritm]] [[kõgõ suurõmb ütine jagaja|kõgõ suurõmba ütidse jagaja]] löüdmises, [[algarv]]oq, [[tävvelidseq arvoq]] ja [[kongruents|kongruendsiq]]. Sjoo haro tähtsämbide vällälöüdüisi hulgan ommaq [[Fermat' väikene teorem]], [[Euleri teorem]], [[Hiina jäägiteorem]], ja [[ruutvastavussäädüs]]. Viil uuritas arvoteooria alostusõn [[Möbiusõ säädäng]]u, [[Euleri fii-säädäng]]u, [[tervidearvõ rong]]õ, [[faktoriaal]]õ ja [[Fibonacci arv]]õ umahuisi.
 
 Mitmõq arvoteooria küsümüseq või sõnastaq arvoteooria alostusõ terminiin, a näile vastamisõs või vaia minnäq tulõmuisi ja teknikat välästpuult arvoteooria alostust. Sääntseq ommaq näütüses: 
 
