*Empty MediaWiki Message*

--- a/Rebase_Alfons.mw
+++ b/Rebase_Alfons.mw
@@ -1,8 +1,8 @@
-[[File:Alfons rebane.jpg|thumb]]
+<!--[[File:Alfons rebane.jpg|thumb]]-->
 {{Elokäük 
  | nimi = Rebase Alfons Vilhelm Robert
  | eestikeeline_nimi = Alfons Vilhelm Robert Rebane
- | pilt = Alfons Rebane in Estonian Army.jpg
+ | pilt = Alfons rebane.jpg
  | sünnüaig = [[24. piimäkuu päiv]] [[1908]]
  | sünnüpaik = [[Valga]]
  | kuulmisaig = [[8. urbõkuu päiv|8. urbõkuu pääväl]] [[1976]]
