*Empty MediaWiki Message*

--- a/Tävvelidseq_arvoq.mw
+++ b/Tävvelidseq_arvoq.mw
@@ -1,5 +1,7 @@
-Tävvelide arv on arv nii et &sigma;(''n'') = 2''n''.
+'''Tävveline arv''' om naturaalarv ''n'', mink kõrral &sigma;(''n'') = 2''n''.
  
-Edimädseq algarvoq ommaq 6, 28, 496, 8128,...
+Edimädseq tävvelidseq arvoq ommaq 6, 28, 496, 8128,...
 
 [[Katõgooria:Arvoteooria]]
+
+[[en:Perfect number]]
