--- a/Supertävvelidseq_arvoq.mw
+++ b/Supertävvelidseq_arvoq.mw
@@ -1,5 +1,7 @@
-Supertävvelide arv on arv nii et &sigma;(&sigma;(''n'')) = 2''n''.
+'''Supertävveline arv''' om naturaalarv, mink kõrral &sigma;(&sigma;(''n'')) = 2''n''.
  
-Edimädseq algarvoq ommaq 2, 4, 16, 64, 4096, 65536, 262144 (OEIS A019279).
+Edimädseq supertävvelidseq arvoq ommaq 2, 4, 16, 64, 4096, 65536, 262144 (OEIS A019279).
 
 [[Katõgooria:Arvoteooria]]
+
+[[en:Superperfect number]]
