*Empty MediaWiki Message*

--- a/Kvasitävveliseq_arvoq.mw
+++ b/Kvasitävveliseq_arvoq.mw
@@ -1,3 +1,5 @@
-Kvasitävveline arv on arv nii et &sigma;(''n'') = 2''n'' + 1
+'''Kvasitävveline arv''' om naturaalarv ''n'', mink kõrral  &sigma;(''n'') = 2''n'' + 1. 
 
 [[Katõgooria:Arvoteooria]]
+
+[[en:Quasiperfect number]]
