*Empty MediaWiki Message*

--- a/Naistõpunahain.mw
+++ b/Naistõpunahain.mw
@@ -24,6 +24,8 @@ Kuiki naistõpunahain om [[elläi|eläjile]] söögis kõlbmaldaq, sööväq tim
 
 Naistõpunahain (ja viil umbõs 370 sorti timä perrekunnast – ''Hypericum'') om parra üleilmalidsõ levimisegaq (sisse tuud ka [[Ameeriga|Ameerikahe]], kuiki peri om tä [[Õuruupa]]st). Kaitsõ ala tä kuulu-i.
 
+==Välislink==
+
 * [http://викисфера.рф/wiki/Зверобой_продырявленный Зверобой продырявленный] // Викисфера
 
 [[Katõgooria:Kasvoq]]
