*Empty MediaWiki Message*

--- a/Prantsusmaa.mw
+++ b/Prantsusmaa.mw
@@ -8,8 +8,8 @@
 |Riigikiil'        = [[prantsusõ kiil]]
 |Pääliin           = [[Pariis]]
 |Riigitüübi pää    = President'
-|Riigipää          = [[Nicolas Sarkozy]]
-|Pääministri       = [[François Fillon]]
+|Riigipää          = [[François Hollande]]
+|Pääministri       = [[Jean-Marc Ayrault]]
 |Suurus            = 674 843
 |Suurusõ perrä     = 42
 |Vett              =
