--- a/Wikipedia:Arotusõtarõ.mw
+++ b/Wikipedia:Arotusõtarõ.mw
@@ -1185,3 +1185,8 @@ Engagement Grants, Wikimedia Foundation]] 28. radokuu 2014, kell 19:44 (UTC)
 
 </div>
 <!-- Sõnumi saatis Kasutaja:AKoval (WMF)@metawiki loendisse leheküljel "http://meta.wikimedia.org/w/index.php?title=IEG/MassMessageList&oldid=7675744". -->
+
+== Proposed optional changes to Terms of Use amendment ==
+
+<div lang="en" dir="ltr" class="mw-content-ltr">Hello all, in response to some community comments in the discussion on the amendment to the Terms of Use on undisclosed paid editing,  we have prepared two optional changes. Please [[m:Terms_of_use/Paid_contributions_amendment#Optional_changes|read about these optional changes on Meta wiki]] and share your comments. If you can (and this is a non english project), please translate this announcement. Thanks! [[m:User:Slaporte (WMF)|Slaporte (WMF)]] 13. urbõkuu 2014, kell 21:55 (UTC) </div>
+<!-- Sõnumi saatis Kasutaja:Jalexander@metawiki loendisse leheküljel "http://meta.wikimedia.org/w/index.php?title=Distribution_list/Global_message_delivery&oldid=7592057". -->
