--- a/Vahtsõnõ_Kalõdoonia.mw
+++ b/Vahtsõnõ_Kalõdoonia.mw
@@ -1,7 +1,7 @@
 {{MaaInfokast|
 Nimi=Vahtsõnõ Kalõdoonia|
 Genitiiv=Vahtsõ Kalõdoonia|
-Lipp=Pilt:Flag of New Caledonia.svg|
+Lipp=Pilt:Flag_of_FLNKS.svg|
 Vapp=Pilt:Emblem_of_New_Caledonia.svg|
 Kaart=Pilt:LocationNewCaledonia.png|
 Riigikiil=[[prantsusõ kiil]]|
