*Empty MediaWiki Message*

--- a/Käsitüü.mw
+++ b/Käsitüü.mw
@@ -1,3 +1,4 @@
+[[Pilt:Artesanía de Salta.jpg|thumb|250px|right|Käsitüü]]
 '''Käsitüü''' om tarbõ- ja iloasjo tegemine käsilde, lihtside tüüriistoga.
 
 [[Katõgooria:Käsitüü]]
