--- a/Wikipedia:Arotusõtarõ.mw
+++ b/Wikipedia:Arotusõtarõ.mw
@@ -1190,3 +1190,12 @@ Engagement Grants, Wikimedia Foundation]] 28. radokuu 2014, kell 19:44 (UTC)
 
 <div lang="en" dir="ltr" class="mw-content-ltr">Hello all, in response to some community comments in the discussion on the amendment to the Terms of Use on undisclosed paid editing,  we have prepared two optional changes. Please [[m:Terms_of_use/Paid_contributions_amendment#Optional_changes|read about these optional changes on Meta wiki]] and share your comments. If you can (and this is a non english project), please translate this announcement. Thanks! [[m:User:Slaporte (WMF)|Slaporte (WMF)]] 13. urbõkuu 2014, kell 21:55 (UTC) </div>
 <!-- Sõnumi saatis Kasutaja:Jalexander@metawiki loendisse leheküljel "http://meta.wikimedia.org/w/index.php?title=Distribution_list/Global_message_delivery&oldid=7592057". -->
+
+== Catalan Culture Challenge ==
+I apologize if this message is not in your language. Please help translate it.
+
+The Catalan-speaking world... Want to find out more? From March 16 to April 15 we will organise the [[:en:Wikipedia:Catalan culture challenge|Catalan Culture Challenge]], a Wikipedia editing contest in which victory will go to those who start and improve the greatest number of articles about 50 key figures of Catalan culture. You can take part by creating or expanding articles on these people in your native language (or any other one you speak). It would be lovely to have you on board. :-)
+
+We look forward to seeing you!
+
+[[:m:Amical Wikimedia|Amical Wikimedia]]--[[Pruukja:Kippelboy|Kippelboy]] ([[Pruukja arotus:Kippelboy|arutelu]]) 15. urbõkuu 2014, kell 17:26 (UTC)
