--- a/3._hainakuu_päiv.mw
+++ b/3._hainakuu_päiv.mw
@@ -20,7 +20,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* ...
+* [[1883]] – [[Franz Kafka]], austria kiränik
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
