--- a/3._piimäkuu_päiv.mw
+++ b/3._piimäkuu_päiv.mw
@@ -31,7 +31,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* [[1924]] – [[Franz Kafka]], austria kiränik
+* [[1924]] – [[Kafka Franz]], austria kiränik
 
 == Pühäq ja tähtpääväq ==
 * ...
