--- a/7._vahtsõaastakuu_päiv.mw
+++ b/7._vahtsõaastakuu_päiv.mw
@@ -18,7 +18,7 @@
 * [[1913]] - [[Urbaniku Leida]], aokiränik
 
 === Eesti inemiseq ===
-* ...
+* [[1887]] – [[Lutsu Oskar]], eesti kiränik
 
 === Muu ilma inemiseq ===
 * ...
