--- a/23._urbõkuu_päiv.mw
+++ b/23._urbõkuu_päiv.mw
@@ -28,7 +28,7 @@
 * [[2008]] - [[Vahingu Vaino]], kiränik ja psükiaatri
 
 === Eesti inemiseq ===
-* ...
+* [[1953]] – [[Lutsu Oskar]], eesti kiränik
 
 === Muu ilma inemiseq ===
 * ...
