--- a/24._märtekuu_päiv.mw
+++ b/24._märtekuu_päiv.mw
@@ -19,7 +19,7 @@
 * [[1929]] - [[Toometi Olev]], oppaja, kodouurja ja poliitik
 
 === Eesti inemiseq ===
-* ...
+* [[1938]] – [[Runneli Hando]], eesti luulõtaja
 
 === Muu ilma inemiseq ===
 * ...
