--- a/21._radokuu_päiv.mw
+++ b/21._radokuu_päiv.mw
@@ -27,7 +27,7 @@
 * [[1903]] - [[Schwartzi Johann Georg II]], kerkoopõtaja
 
 === Eesti inemiseq ===
-* ...
+* [[1995]] – [[Viidingu Juhan]], eesti luulõtaja
 
 === Muu ilma inemiseq ===
 * ...
