--- a/30._vahtsõaastakuu_päiv.mw
+++ b/30._vahtsõaastakuu_päiv.mw
@@ -17,7 +17,7 @@
 * [[1951]] - [[Puura Väino]], oopõrilaulja ja näütlejä
 
 === Eesti inemiseq ===
-* ...
+* [[1878]] – [[Tammsaare Anton Hansen]], eesti kiränik
 
 === Muu ilma inemiseq ===
 * ...
