--- a/1._urbõkuu_päiv.mw
+++ b/1._urbõkuu_päiv.mw
@@ -28,7 +28,7 @@
 * ...
 
 === Eesti inemiseq ===
-* ...
+* [[1940]] – [[Tammsaare Anton Hansen]], eesti kiränik
 
 === Muu ilma inemiseq ===
 * ...
