--- a/9._vahtsõaastakuu_päiv.mw
+++ b/9._vahtsõaastakuu_päiv.mw
@@ -18,7 +18,7 @@
 * [[1897]] - [[Viiardi Richard]], põllomiis ja vallavanõmb
 
 === Eesti inemiseq ===
-* ...
+* [[1891]] – [[Gailiti August]], eesti kiränik
 
 === Muu ilma inemiseq ===
 * ...
