--- a/1._vahtsõaastakuu_päiv.mw
+++ b/1._vahtsõaastakuu_päiv.mw
@@ -20,7 +20,7 @@
 * [[1930]] - [[As'a Aksli]], tiatrimiis
 
 === Eesti inemiseq ===
-* ...
+* [[1944]] - [[Undi Mati]], eesti kiränik
 
 === Muu ilma inemiseq ===
 * ...
