--- a/22._põimukuu_päiv.mw
+++ b/22._põimukuu_päiv.mw
@@ -28,7 +28,7 @@
 *[[1960]] - [[Pütsepä Eduard]], maadlõja, olümpiävõitja
 
 ===Eesti inemiseq===
-*...
+* [[2005]] - [[Undi Mati]], eesti kiränik
 
 ===Muu ilma inemiseq===
 *...
