*Empty MediaWiki Message*

--- a/Tai.mw
+++ b/Tai.mw
@@ -8,7 +8,7 @@ Riigikiil=[[tai kiil]]|
 Pääliin=[[Bangkok]]|
 Suurus=514 000 |
 Rahvaarv=64 265 276 |
-Raha=baat |
+Raha=[[baat]] |
 Internetitunnus=[[.th]] |
 }}
 
