*Empty MediaWiki Message*

--- a/Chi-ho_Yun.mw
+++ b/Chi-ho_Yun.mw
@@ -1,3 +1,18 @@
-'''Chi-ho Yun'''('''Yun Chi-ho''', [[26. joulukuu päiv]] [[1864]] [[Asan]], [[Lõunõ-Korea]] - [[9. joulukuu päiv]] [[1945]] [[Gaeseong]], [[Lõunõ-Korea]]) ja tä oll` [[Korea]] poliitik, Resistance Activists. 
+{{Elokäük 
+ | nimi = Chi-ho Yun
+ | pilt = :Yoon30.jpg
+ | sünnüaig = [[26. joulukuu päiv]] [[1864]
+ | sünnüpaik = [[Asan]], [[Lõunõ-Korea]]
+ | kuulmisaig = [[9. joulukuu päiv]] [[1945]]
+ | kuulmispaik = [[Gaeseong]], [[Lõunõ-Korea]]
+ | matmispaik = 
+ | ammõt = poliitik, Resistance Activists
+ }}
+'''Chi-ho Yun'''('''Yun Chi-ho''') ([[Korea]]:윤치호;尹致昊, [[26. joulukuu päiv]] [[1864]] [[Asan]], [[Lõunõ-Korea]] - [[9. joulukuu päiv]] [[1945]] [[Gaeseong]], [[Lõunõ-Korea]]) ja tä oll` [[Korea]] poliitik, Resistance Activists. 
+
+== Välislingiq ==
+* Emory University : [http://marbl.library.emory.edu/findingaids/content.php?id=yun754_100767 Yun Ch'i-ho papers, 1883-1943] (English)
+* [http://openlibrary.org/books/OL2903362M/The_collected_letters_of_Yun_Tchi_Ho The collected letters of Yun Tchi Ho] (English) 
+* [http://findingaids.library.emory.edu/documents/yun754/ Yun Ch‘i-ho papers, 1883-1943] Emory University (English)
 
 [[Katõgooria:Lõunõ-Korea]]
