*Empty MediaWiki Message*

--- a/Chi-ho_Yun.mw
+++ b/Chi-ho_Yun.mw
@@ -1,7 +1,7 @@
 {{Elokäük 
  | nimi = Chi-ho Yun
  | pilt = Yoon30.jpg
- | sünnüaig = [[26. joulukuu päiv]] [[1864]
+ | sünnüaig = [[26. joulukuu päiv]] [[1864]]
  | sünnüpaik = [[Asan]], [[Lõunõ-Korea]]
  | kuulmisaig = [[9. joulukuu päiv]] [[1945]]
  | kuulmispaik = [[Gaeseong]], [[Lõunõ-Korea]]
