--- a/Chi-ho_Yun.mw
+++ b/Chi-ho_Yun.mw
@@ -8,7 +8,7 @@
  | matmispaik = 
  | ammõt = poliitik, Resistance Activists
  }}
-'''Chi-ho Yun'''('''Yun Chi-ho''') ([[Korea]]:윤치호;尹致昊, [[26. joulukuu päiv]] [[1864]] [[Asan]], [[Lõunõ-Korea]] - [[9. joulukuu päiv]] [[1945]] [[Gaeseong]], [[Lõunõ-Korea]]) ja tä oll` [[Korea]] poliitik, Resistance Activists. 
+'''Chi-ho Yun'''('''Yun Chi-ho''') ([[Korea]]:윤치호;尹致昊, [[26. joulukuu päiv]] [[1864]] [[Asan]], [[Lõunõ-Korea]] - [[9. joulukuu päiv]] [[1945]] [[Gaeseong]], [[Lõunõ-Korea]]) oll` [[Korea]] poliitik, Resistance Activists. 
 
 == Välislingiq ==
 * Emory University : [http://marbl.library.emory.edu/findingaids/content.php?id=yun754_100767 Yun Ch'i-ho papers, 1883-1943] (English)
