*Empty MediaWiki Message*

--- a/Seo_Jae-pil.mw
+++ b/Seo_Jae-pil.mw
@@ -1,3 +1,9 @@
 '''Seo Jae-pil'''([[Korea]]:서재필;徐載弼, [[7. vahtsõaastakuu päiv]] [[1864]] [[Bosung]], [[Lõunõ-Korea]] - [[5. vahtsõaastakuu päiv]] [[1951]] [[Philadelphia]], [[Pennsylvania]]) oll` [[Korea]] poliitik, Resistance Activists, doctor. Amreican name '''Philip Jaisohn''', '''Philip Jason'''. 
 
+== Välislingiq ==
+* [http://world.kbs.co.kr/english/program/program_koreanstory_detail.htm?No=32295 Seo Jae-pil, Pioneer of Enlightenment for Independence] KBS (English)
+* [http://www.koreatimes.co.kr/www/news/culture/2013/01/323_71353.html Seo Jae-pil, a Korean intellectual and activist] koreatimes 2010.08.12 (English)
+* [http://magazine.lafayette.edu/fall2011/2011/11/18/jaisohn-was-champion-for-korean-independence/ Jaisohn Was Champion for Korean Independence] (English)
+* [http://www.koreatimes.co.kr/www/news/nation/2012/07/363_101797.html (20) Seo Jae-pil: pioneering reformer, independence fighter] koreatimes 2011.12.28 (English)
+
 [[Katõgooria:Lõunõ-Korea]]
