*Empty MediaWiki Message*

--- a/Seo_Jae-pil.mw
+++ b/Seo_Jae-pil.mw
@@ -1,3 +1,13 @@
+{{Elokäük 
+ | nimi = Seo Jae-pil
+ | pilt = Yoon30.jpg
+ | sünnüaig = [[7. vahtsõaastakuu päiv]] [[1864]]
+ | sünnüpaik = [[Bosung]], [[Lõunõ-Korea]]
+ | kuulmisaig = [[5. vahtsõaastakuu päiv]] [[1951]]
+ | kuulmispaik = [[Philadelphia]], [[Pennsylvania]]
+ | matmispaik = 
+ | ammõt = Resistance Activists, poliitik, doctor
+ }}
 '''Seo Jae-pil'''([[Korea]]:서재필;徐載弼, [[7. vahtsõaastakuu päiv]] [[1864]] [[Bosung]], [[Lõunõ-Korea]] - [[5. vahtsõaastakuu päiv]] [[1951]] [[Philadelphia]], [[Pennsylvania]]) oll` [[Korea]] poliitik, Resistance Activists, doctor. Amreican name '''Philip Jaisohn''', '''Philip Jason'''. 
 
 == Välislingiq ==
