--- a/Seo_Jae-pil.mw
+++ b/Seo_Jae-pil.mw
@@ -1,6 +1,6 @@
 {{Elokäük 
  | nimi = Seo Jae-pil
- | pilt = Yoon30.jpg
+ | pilt = Seo Jae-pil 1947.jpg
  | sünnüaig = [[7. vahtsõaastakuu päiv]] [[1864]]
  | sünnüpaik = [[Bosung]], [[Lõunõ-Korea]]
  | kuulmisaig = [[5. vahtsõaastakuu päiv]] [[1951]]
@@ -17,3 +17,40 @@
 * [http://www.koreatimes.co.kr/www/news/nation/2012/07/363_101797.html (20) Seo Jae-pil: pioneering reformer, independence fighter] koreatimes 2011.12.28 (English)
 
 [[Katõgooria:Lõunõ-Korea]]
+
+[[af:Philip Jaisohn]]
+[[als:Seo Jae-pil]]
+[[ang:Philip Jaisohn]]
+[[bcl:Philip Jaisohn]]
+[[ca:Felip Jaisohn]]
+[[cdo:Seo Jae-pil]]
+[[cy:Seo Jae-pil]]
+[[de:Philip Jaisohn]]
+[[en:Seo Jae-pil]]
+[[eo:Philip Jaisohn]]
+[[es:Felipe Jaisohn]]
+[[et:Seo Jae-pil]]
+[[eu:Philip Jaisohn]]
+[[fr:Philip Jaisohn]]
+[[gan:徐載弼]]
+[[hak:Chhî Chai-Phit]]
+[[hu:Szo Dzsephil]]
+[[id:Philip Jaisohn]]
+[[ja:徐載弼]]
+[[jv:Seo Jae-pil]]
+[[ko:서재필]]
+[[ksh:Seo Jae-pil]]
+[[la:Philippus Jaisohnus]]
+[[pl:Philip Jaisohn]]
+[[pt:Philip Jaisohn]]
+[[ro:Philip Jaisohn]]
+[[ru:Со Джэпхиль]]
+[[simple:Philip Jaisohn]]
+[[tr:Phillip Jaisohn]]
+[[tk:Seo Jae-pil]]
+[[vi:Seo Jae-pil]]
+[[war:Philip Jaisohn]]
+[[wuu:徐載弼]]
+[[zh:徐載弼]]
+[[zh-yue:徐載弼]]
+[[zh-min-nan:Seo Jae-pil]]
