*Empty MediaWiki Message*

--- a/Sung_Jae-ki.mw
+++ b/Sung_Jae-ki.mw
@@ -1,3 +1,13 @@
+{{Elokäük 
+ | nimi = Sung Jae-ki
+ | pilt = 
+ | sünnüaig = [[11. süküskuu päiv]] [[1967]]
+ | sünnüpaik = [[Daegu]], [[Lõunõ-Korea]]
+ | kuulmisaig = [[26. hainakuu päiv]] [[2013]]
+ | kuulmispaik = [[Seoul]], [[Lõunõ-Korea]]
+ | matmispaik = 
+ | ammõt = Human right Activists, civil right activists
+ }}
 '''Sung Jae-ki'''([[Korea]]:성재기;成在基, [[11. süküskuu päiv]] [[1967]] [[Daegu]], [[Lõunõ-Korea]] - [[26. hainakuu päiv]] [[2013]] [[Seoul]], [[Lõunõ-Korea]]) oll` [[Korea]] Human right Activists, civil right activists. 
 
 [[Katõgooria:Lõunõ-Korea]]
