*Empty MediaWiki Message*

--- a/Sung_Jae-ki.mw
+++ b/Sung_Jae-ki.mw
@@ -8,6 +8,13 @@
  | matmispaik = 
  | ammõt = Human right Activists, civil right activists
  }}
-'''Sung Jae-ki'''([[Korea]]:성재기;成在基, [[11. süküskuu päiv]] [[1967]] [[Daegu]], [[Lõunõ-Korea]] - [[26. hainakuu päiv]] [[2013]] [[Seoul]], [[Lõunõ-Korea]]) oll` [[Korea]] Human right Activists, civil right activists. 
+'''Sung Jae-ki'''([[Korea]]:성재기;成在基, [[11. süküskuu päiv]] [[1967]] [[Daegu]], [[Lõunõ-Korea]] - [[26. hainakuu päiv]] [[2013]] [[Seoul]], [[Lõunõ-Korea]]<ref>[http://blogs.wsj.com/korearealtime/2013/11/08/seoul-bridge-of-life-still-attracts-suicide-attempts/ Seoul ‘Bridge of Life’ Attracts More Suicide Attempts] korearealtime 2013.11.08 (English)</ref>) oll` [[Korea]] Human right Activists, civil right activists.<ref>[http://english.donga.com/srv/service.php3?biid=2013072913348 ''Suicide performance and journalist ethics] News Dongah'' (English)</ref> 
+
+== Välislingiq ==
+* [http://english.donga.com/srv/service.php3?biid=2013072913348 ''Suicide performance and journalist ethics] News Dongah'' (English)
+* [http://www.koreaherald.com/view.php?ud=20130729000881 Body of Sung Jae-gi found in Han River] Koreaherald 2013.07.29 (English)
+* [http://english.yonhapnews.co.kr/news/2013/07/27/0200000000AEN20130727001300320.html Police continue search for missing men's rights activist] yonhapnews 2013.07.27 (English)
+* [http://blogs.wsj.com/korearealtime/2013/11/08/seoul-bridge-of-life-still-attracts-suicide-attempts/ Seoul ‘Bridge of Life’ Attracts More Suicide Attempts] korearealtime 2013.11.08 (English)
+* [http://stream.aljazeera.com/story/201307292238-0022943 South Korean channel films suicide] (English)
 
 [[Katõgooria:Lõunõ-Korea]]
