*Empty MediaWiki Message*

--- a/Chi-ho_Yun.mw
+++ b/Chi-ho_Yun.mw
@@ -6,14 +6,14 @@
  | kuulmisaig = [[9. joulukuu päiv]] [[1945]]
  | kuulmispaik = [[Gaeseong]], [[Lõunõ-Korea]]
  | matmispaik = 
- | ammõt = poliitik, Resistance Activists
+ | ammõt = poliitik, vabahusvõitlõja
  }}
-'''Chi-ho Yun'''('''Yun Chi-ho''') ([[Korea]]:윤치호;尹致昊, [[26. joulukuu päiv]] [[1864]] [[Asan]], [[Lõunõ-Korea]] - [[9. joulukuu päiv]] [[1945]] [[Gaeseong]], [[Lõunõ-Korea]]) oll` [[Korea]] poliitik, Resistance Activists. 
+'''Chi-ho Yun'''('''Yun Chi-ho''') ([[Korea]]:윤치호;尹致昊, [[26. joulukuu päiv]] [[1864]] [[Asan]], [[Lõunõ-Korea]] - [[9. joulukuu päiv]] [[1945]] [[Gaeseong]], [[Lõunõ-Korea]]) oll'  [[Korea]] poliitik ja vabahusvõitlõja. 
 
 == Välislingiq ==
-* Emory University : [http://marbl.library.emory.edu/findingaids/content.php?id=yun754_100767 Yun Ch'i-ho papers, 1883-1943] (English)
-* [http://openlibrary.org/books/OL2903362M/The_collected_letters_of_Yun_Tchi_Ho The collected letters of Yun Tchi Ho] (English) 
-* [http://findingaids.library.emory.edu/documents/yun754/ Yun Ch‘i-ho papers, 1883-1943] Emory University (English)
+* Emory Ülikuul : [http://marbl.library.emory.edu/findingaids/content.php?id=yun754_100767 Yun Ch'i-ho artikliq, 1883-1943] (English)
+* [http://openlibrary.org/books/OL2903362M/The_collected_letters_of_Yun_Tchi_Ho Chi-ho Yuni kiräq] (English) 
+* [http://findingaids.library.emory.edu/documents/yun754/ Chi-ho Yuni artikliq, 1883-1943] Emory Ülikuul (English)
 
 [[Katõgooria:Lõunõ-Korea]]
 
