*Empty MediaWiki Message*

--- a/Chi-ho_Yun.mw
+++ b/Chi-ho_Yun.mw
@@ -15,7 +15,7 @@
 * [http://openlibrary.org/books/OL2903362M/The_collected_letters_of_Yun_Tchi_Ho Chi-ho Yuni kiräq] (English) 
 * [http://findingaids.library.emory.edu/documents/yun754/ Chi-ho Yuni artikliq, 1883-1943] Emory Ülikuul (English)
 
-[[Katõgooria:Lõunõ-Korea]]
+[[Katõgooria:Lõunõ-Korea inemiseq]]
 
 [[af:Yun Chi-ho]]
 [[als:Yun Chi-ho]]
