*Empty MediaWiki Message*

--- a/Seo_Jae-pil.mw
+++ b/Seo_Jae-pil.mw
@@ -16,7 +16,7 @@
 * [http://magazine.lafayette.edu/fall2011/2011/11/18/jaisohn-was-champion-for-korean-independence/ Jaisohn Was Champion for Korean Independence] (English)
 * [http://www.koreatimes.co.kr/www/news/nation/2012/07/363_101797.html (20) Seo Jae-pil: pioneering reformer, independence fighter] koreatimes 2011.12.28 (English)
 
-[[Katõgooria:Lõunõ-Korea]]
+[[Katõgooria:Lõunõ-Korea inemiseq]]
 
 [[af:Philip Jaisohn]]
 [[als:Seo Jae-pil]]
