--- a/Sung_Jae-ki.mw
+++ b/Sung_Jae-ki.mw
@@ -17,7 +17,7 @@
 * [http://blogs.wsj.com/korearealtime/2013/11/08/seoul-bridge-of-life-still-attracts-suicide-attempts/ Seoul ‘Bridge of Life’ Attracts More Suicide Attempts] korearealtime 2013.11.08 (English)
 * [http://stream.aljazeera.com/story/201307292238-0022943 South Korean channel films suicide] (English)
 
-[[Katõgooria:Lõunõ-Korea]]
+[[Katõgooria:Lõunõ-Korea inemiseq]]
 
 [[af:Sung Jae-ki]]
 [[als:Sung Jae-ki]]
