*Empty MediaWiki Message*

--- a/Sung_Jae-ki.mw
+++ b/Sung_Jae-ki.mw
@@ -17,6 +17,9 @@
 * [http://blogs.wsj.com/korearealtime/2013/11/08/seoul-bridge-of-life-still-attracts-suicide-attempts/ Seoul ‘Bridge of Life’ Attracts More Suicide Attempts] korearealtime 2013.11.08 (English)
 * [http://stream.aljazeera.com/story/201307292238-0022943 South Korean channel films suicide] (English)
 
+== Lätteq ==
+<references>
+
 [[Katõgooria:Lõunõ-Korea inemiseq]]
 
 [[af:Sung Jae-ki]]
