*Empty MediaWiki Message*

--- a/Sung_Jae-ki.mw
+++ b/Sung_Jae-ki.mw
@@ -6,9 +6,9 @@
  | kuulmisaig = [[26. hainakuu päiv]] [[2013]]
  | kuulmispaik = [[Seoul]], [[Lõunõ-Korea]]
  | matmispaik = 
- | ammõt = Human right Activists, civil right activists
+ | ammõt = ütiskunnategeläne
  }}
-'''Sung Jae-ki'''([[Korea]]:성재기;成在基, [[11. süküskuu päiv]] [[1967]] [[Daegu]], [[Lõunõ-Korea]] - [[26. hainakuu päiv]] [[2013]] [[Seoul]], [[Lõunõ-Korea]]<ref>[http://blogs.wsj.com/korearealtime/2013/11/08/seoul-bridge-of-life-still-attracts-suicide-attempts/ Seoul ‘Bridge of Life’ Attracts More Suicide Attempts] korearealtime 2013.11.08 (English)</ref>) oll` [[Korea]] Human right Activists, civil right activists.<ref>[http://english.donga.com/srv/service.php3?biid=2013072913348 ''Suicide performance and journalist ethics] News Dongah'' (English)</ref> 
+'''Sung Jae-ki'''([[Korea]]:성재기;成在基, [[11. süküskuu päiv]] [[1967]] [[Daegu]], [[Lõunõ-Korea]] - [[26. hainakuu päiv]] [[2013]] [[Seoul]], [[Lõunõ-Korea]]<ref>[http://blogs.wsj.com/korearealtime/2013/11/08/seoul-bridge-of-life-still-attracts-suicide-attempts/ Seoul ‘Bridge of Life’ Attracts More Suicide Attempts] korearealtime 2013.11.08 (English)</ref>) oll' [[Korea]] ütiskunnategeläne, kiä saisõ miihi õiguisi iist ja oll' antifeminist.<ref>[http://english.donga.com/srv/service.php3?biid=2013072913348 ''Suicide performance and journalist ethics] News Dongah'' (English)</ref> 
 
 == Välislingiq ==
 * [http://english.donga.com/srv/service.php3?biid=2013072913348 ''Suicide performance and journalist ethics] News Dongah'' (English)
