*Empty MediaWiki Message*

--- a/Seo_Jae-pil.mw
+++ b/Seo_Jae-pil.mw
@@ -8,7 +8,7 @@
  | matmispaik = 
  | ammõt = Resistance Activists, poliitik, doctor
  }}
-'''Seo Jae-pil'''([[Korea]]:서재필;徐載弼, [[7. vahtsõaastakuu päiv]] [[1864]] [[Bosung]], [[Lõunõ-Korea]] - [[5. vahtsõaastakuu päiv]] [[1951]] [[Philadelphia]], [[Pennsylvania]]) oll` [[Korea]] poliitik, Resistance Activists, doctor. Amreican name '''Philip Jaisohn''', '''Philip Jason'''. 
+'''Seo Jae-pil'''([[Korea]]:서재필;徐載弼, [[7. vahtsõaastakuu päiv]] [[1864]] [[Bosung]], [[Lõunõ-Korea]] - [[5. vahtsõaastakuu päiv]] [[1951]] [[Philadelphia]], [[Pennsylvania]]) oll'  [[Korea]] poliitik, aokiränik ja arst. Tä oll' edimäne korealanõ, kiä sai naturalisats'ooni kõrran Ameeriga Ütisriike kodakundsusõ. Ameerikan tarvit' tä nimme '''Philip Jaisohn''' vai '''Philip Jason'''. 
 
 == Välislingiq ==
 * [http://world.kbs.co.kr/english/program/program_koreanstory_detail.htm?No=32295 Seo Jae-pil, Pioneer of Enlightenment for Independence] KBS (English)
