*Empty MediaWiki Message*

--- a/Seo_Jae-pil.mw
+++ b/Seo_Jae-pil.mw
@@ -4,9 +4,9 @@
  | sünnüaig = [[7. vahtsõaastakuu päiv]] [[1864]]
  | sünnüpaik = [[Bosung]], [[Lõunõ-Korea]]
  | kuulmisaig = [[5. vahtsõaastakuu päiv]] [[1951]]
- | kuulmispaik = [[Philadelphia]], [[Pennsylvania]]
+ | kuulmispaik = [[Philadelphia]], [[USA]]
  | matmispaik = 
- | ammõt = Resistance Activists, poliitik, doctor
+ | ammõt = poliitik, aokiränik, arst
  }}
 '''Seo Jae-pil'''([[Korea]]:서재필;徐載弼, [[7. vahtsõaastakuu päiv]] [[1864]] [[Bosung]], [[Lõunõ-Korea]] - [[5. vahtsõaastakuu päiv]] [[1951]] [[Philadelphia]], [[Pennsylvania]]) oll'  [[Korea]] poliitik, aokiränik ja arst. Tä oll' edimäne korealanõ, kiä sai naturalisats'ooni kõrran Ameeriga Ütisriike kodakundsusõ. Ameerikan tarvit' tä nimme '''Philip Jaisohn''' vai '''Philip Jason'''. 
 
