--- a/Kataloonia.mw
+++ b/Kataloonia.mw
@@ -1,3 +1,4 @@
+[[Pilt:Localización de Cataluña.svg|200px|thumb|Kon Kataloonia Hispaanian om.]]
 '''Kataloonia''' om autonuumnõ piirkund [[Hispaania]]n. 
 
 [[Katõgooria:Õuruupa maaq]]
