*Empty MediaWiki Message*

--- a/Kataloonia.mw
+++ b/Kataloonia.mw
@@ -1,5 +1,5 @@
 [[Pilt:Localización de Cataluña.svg|200px|thumb|Kon Kataloonia Hispaanian om.]]
-'''Kataloonia''' om autonuumnõ piirkund [[Hispaania]]n. 
+'''Kataloonia''' om autonuumnõ piirkund Põh'ahummogu-[[Hispaania]]n [[Vaihhõmeri|Vaihhõmere]] veeren. 
 
 [[Katõgooria:Õuruupa maaq]]
 [[Katõgooria:Hispaania]]
