--- a/Kataloonia.mw
+++ b/Kataloonia.mw
@@ -1,5 +1,7 @@
 [[Pilt:Localización de Cataluña.svg|200px|thumb|Kon Kataloonia Hispaanian om.]]
 '''Kataloonia''' om autonuumnõ piirkund Põh'ahummogu-[[Hispaania]]n [[Vaihhõmeri|Vaihhõmere]] veeren. Piirkunna suurus om 32 114 kruutkilomiitret (veitse vähämb ku Eesti) ja sääl eläs umbõs 7,6 mill'onat inemist.
 
+Kataloonia põlisrahvas ommaq [[katalaaniq]].
+
 [[Katõgooria:Õuruupa maaq]]
 [[Katõgooria:Hispaania]]
