*Empty MediaWiki Message*

--- a/Sung_Jae-ki.mw
+++ b/Sung_Jae-ki.mw
@@ -10,7 +10,7 @@
  }}
 '''Sung Jae-ki'''([[Korea]]:성재기;成在基, [[11. süküskuu päiv]] [[1967]] [[Daegu]], [[Lõunõ-Korea]] - [[26. hainakuu päiv]] [[2013]] [[Seoul]], [[Lõunõ-Korea]]<ref>[http://blogs.wsj.com/korearealtime/2013/11/08/seoul-bridge-of-life-still-attracts-suicide-attempts/ Seoul ‘Bridge of Life’ Attracts More Suicide Attempts] korearealtime 2013.11.08 (English)</ref>) oll' [[Korea]] ütiskunnategeläne, kiä saisõ miihi õiguisi iist ja oll' antifeminist.<ref>[http://english.donga.com/srv/service.php3?biid=2013072913348 ''Suicide performance and journalist ethics] News Dongah'' (English)</ref> found oil [[Association of Korean male]](남성연대 男性連帶). 
 
-In 2013, he oll' sucide, protest oll' sex discrimination.
+In 2013, he oll' sucide<ref>[http://english.yonhapnews.co.kr/news/2013/07/27/0200000000AEN20130727001300320.html Police continue search for missing men's rights activist] yonhapnews 2013.07.27 (English)</ref>, protest oll' sex discrimination.
 
 == Välislingiq ==
 * [http://english.donga.com/srv/service.php3?biid=2013072913348 ''Suicide performance and journalist ethics] News Dongah'' (English)
