--- a/Arvoteooria.mw
+++ b/Arvoteooria.mw
@@ -41,7 +41,7 @@ Ku vällä arvata [[Fibonacci]] (kiä elli ja oppõ ka Põh'a-[[Afrikan]] ja [[K
 [[Pilt:Pierre de Fermat.png|150px|thumb|[[Fermat' Pierre]]]]
 [[Fermat' Pierre]] (1601-1665) es avaldaq ilmangi ummi töid trükün. Timä tulõmusõq arvoteooria alalt ommaq teedäq õnnõ kirävaihtusõst tõisi matõmaatikidõga ja märkmist, midä tä tekk' raamadulehekülgi servi pääle. Tä panõ-õs kirja pia üttegi arvoteoreetilist tõõstust. Tä tarvit' [[matõmaatilinõ indukts'uun|matõmaatilist indukts'uuni]] ja lõpmalda laskumisõ meetodit. 
 
-Üteq edimädseq as'aq, miä Fermat'd huvitiq, olliq [[tävveline arv|tävvelidseq arvoq]] (noist oll' juttu joba Eukleidese "Elemente" IX raamatun) ja [[sõbralikuq arvoq]]. Tuu mant joud' tä tervide arvõ jagonõmisõ uurmisõ mano, ja tuust oll' juttu ka timä kirävaihtusõn tuu ao matõmaatikidõga alatõn 1636. aastagast. Tä uurõ hoolõga Bachet tõlgit Diophantosõ "Aritmeetikat". 1643. aastagas olliq tedä huvitama naanuq diofantilidsõq probleemiq ja kruutõ summaq (midä Diophantos oll' kah joba kaenuq).
+Üteq edimädseq as'aq, miä Fermat'd huvitiq, olliq [[tävvelidseq arvoq]] (noist oll' juttu joba Eukleidese "Elemente" IX raamatun) ja [[sõbralikuq arvoq]]. Tuu mant joud' tä tervide arvõ jagonõmisõ uurmisõ mano, ja tuust oll' juttu ka timä kirävaihtusõn tuu ao matõmaatikidõga alatõn 1636. aastagast. Tä uurõ hoolõga Bachet tõlgit Diophantosõ "Aritmeetikat". 1643. aastagas olliq tedä huvitama naanuq diofantilidsõq probleemiq ja kruutõ summaq (midä Diophantos oll' kah joba kaenuq).
 
 Fermat' tähtsämbäq tulõmusõq arvoteoorian olliq sääntseq. 
 * [[Fermat' väikene teorem]] (1640), miä ütles, et ku algarv ''p'' ei jagaq terveht arvo ''a'', sõs <math>\scriptstyle a^{p-1}
