*Empty MediaWiki Message*

--- a/Erdösi_Paul.mw
+++ b/Erdösi_Paul.mw
@@ -5,7 +5,7 @@
 |sünnüaig=[[1913]]
 |sünnüpaik=[[Budapest]], [[Ungari]]
 |kuulmisaig=[[1996]]
-|kuulmispaik=[[Warszawa]], [[Poola]]
+|kuulmispaik=[[Varssavi]], [[Poola]]
 |rahvus=ungari
 |ammõt=matõmaatik
 }}
