*Empty MediaWiki Message*

--- a/Füüsiga.mw
+++ b/Füüsiga.mw
@@ -2,7 +2,7 @@
 
 == Võro- ja Setomaalt perit füüsiguq ==
 
-[[Võromaa]]lt ommaq perit füüsiguq ja [[Võro liikminõ|võro liikmisõ]] tegeläseq [[Kõivo Madis]], [[Kasagu Enn]] ja [[Visseli Agu]].hello
+[[Võromaa]]lt ommaq perit füüsiguq ja [[Võro liikminõ|võro liikmisõ]] tegeläseq [[Kõivo Madis]], [[Kasagu Enn]] ja [[Visseli Agu]].
 
 == Kaeq viil ==
 * [[Lühkene võro-eesti loodusõtsäpendämise sõnastik]]
