--- a/The_Doors.mw
+++ b/The_Doors.mw
@@ -1,4 +1,4 @@
-[[Pilt:Queen 1984 012.jpg|thumb|right|200px|Queeni kontsõrt Frankfurdin, S'aksamaal 1984]]
+[[Pilt:Doors electra publicity photo.JPG|thumb|right|250px]]
 
 
 '''The Doors''' oll' [[Ameeriga Ütisriigiq]] [[rokk]]ansambli, miä luudi [[1965]]. aastagal [[Los Angeles]]in.
