*Empty MediaWiki Message*

--- a/The_Doors.mw
+++ b/The_Doors.mw
@@ -1,7 +1,7 @@
 [[Pilt:Doors electra publicity photo.JPG|thumb|right|250px]]
 
 
-'''The Doors''' oll' [[Ameeriga Ütisriigiq]] [[rokk]]ansambli, miä luudi [[1965]]. aastagal [[Los Angeles]]in.
+'''The Doors''' oll' [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] [[rokk]]ansambli, miä luudi [[1965]]. aastagal [[Los Angeles]]in.
 
 == Liikmõq ==
 * [[Jim Morrison]] (1965–1971)
