*Empty MediaWiki Message*

--- a/Laxi_Peter.mw
+++ b/Laxi_Peter.mw
@@ -10,7 +10,7 @@
 |ammõt=matõmaatik
 }}
 
-'''Peter Lax''' ([[1926]] – )  on [[ungari]] [[matõmaatik]].
+'''Peter Lax''' ([[1926]] – )  om [[ungari]] [[matõmaatik]].
 
 
 [[Katõgooria:Ungari inemiseq]]
