--- a/Halmosi_Paul.mw
+++ b/Halmosi_Paul.mw
@@ -10,7 +10,7 @@
 |ammõt=matõmaatik
 }}
 
-'''Paul Halmos''' ([[1916]] – [[2006]])  oll' [[ungari]] [[matõmaatik]].
+'''Halmosi Paul '''(Paul Halmos, [[1916]] – [[2006]])  oll' [[ungari]] [[matõmaatik]].
 
 
 [[Katõgooria:Ungari inemiseq]]
