*Empty MediaWiki Message*

--- a/Halmosi_Paul.mw
+++ b/Halmosi_Paul.mw
@@ -1,6 +1,6 @@
 {{Elokäük
 |pilt=Paul Halmos.jpeg
-|pildiallkiri=Paul Halmos
+|pildiallkiri=Halmosi Paul
 |nimi=Paul Halmos
 |sünnüaig=[[1916]]
 |sünnüpaik=[[Budapest]], [[Ungari]]
