--- a/Halmosi_Paul.mw
+++ b/Halmosi_Paul.mw
@@ -1,7 +1,7 @@
 {{Elokäük
 |pilt=Paul Halmos.jpeg
 |pildiallkiri=Halmosi Paul
-|nimi=Paul Halmos
+|nimi=Halmosi Paul
 |sünnüaig=[[1916]]
 |sünnüpaik=[[Budapest]], [[Ungari]]
 |kuulmisaig=[[2006]]
