*Empty MediaWiki Message*

--- a/Laxi_Peter.mw
+++ b/Laxi_Peter.mw
@@ -1,7 +1,7 @@
 {{Elokäük
 |pilt=Peter Lax in Tokyo.jpg
-|pildiallkiri=Peter Lax
-|nimi=Peter Lax
+|pildiallkiri=Laxi Peter
+|nimi=Laxi Peter
 |sünnüaig=[[1926]]
 |sünnüpaik=[[Budapest]], [[Ungari]]
 |kuulmisaig=
@@ -10,8 +10,10 @@
 |ammõt=matõmaatik
 }}
 
-'''Peter Lax''' ([[1926]] – )  om [[ungari]] [[matõmaatik]].
+'''Laxi Peter''' (Peter Lax, [[1926]] – )  om [[ungari]] [[matõmaatik]].
 
 
 [[Katõgooria:Ungari inemiseq]]
 [[Katõgooria:Ungari matõmaatiguq]]
+
+[[en:Peter Lax]]
