--- a/Majandustiidüs.mw
+++ b/Majandustiidüs.mw
@@ -1,5 +1,7 @@
 '''Majandustiidüs''' om ütiskunnatiidüs, miä uur [[kaup]]o ja [[teenüs]]side tuutmist, [[kaubandus|vaihtamist]], jaotamist ja tarvitamist. 
 
+{{Commonscat|Economics}}
+
 [[Katõgooria:Majandustiidüs]]
 
 {{Link FA|fr}}
