--- a/Eesti.mw
+++ b/Eesti.mw
@@ -24,7 +24,7 @@
 | [[Toomas Hendrik Ilves]]
 |- 
 | '''[[Eesti pääministri|Pääministri]]'''
-| [[Andrus Ansip]]
+| [[Taavi Rõivas]]
 |- 
 | '''[[Suurus]]'''<br />&nbsp;- Kokko<br /> &nbsp;- % vett
 | [[Maailma maaq suurusõ perrä|maailma maiõ hulgan 129.]]<br /> [[1 E10 m²|45,226 km²]]<br /> 4.56%
