*Empty MediaWiki Message*

--- a/Afrikaani_kiil.mw
+++ b/Afrikaani_kiil.mw
@@ -23,3 +23,7 @@ Afrikaani kiräkiil kujosi vällä 1870. aastil. Inne tuud oll' kiräkeeles olnu
 
 [[Katõgooria: Keeleq]]
 [[Katõgooria:Lõunõ-Afriga Vabariik]]
+
+
+[[et:afrikaani keel]]
+[[en:Afrikaans]]
