--- a/Afrikaani_kiil.mw
+++ b/Afrikaani_kiil.mw
@@ -10,7 +10,7 @@
 | iso3  = afr
 }}
 
-[[Pilt:Afrikaansdistrib.png|thumb|right|Lõunõ-Afriga maakunnaq, kon afrikaani imäkeelega inemiisi om inämbüs.]]
+[[Pilt:South Africa Afrikaans speakers proportion map.svg|thumb|right|Afrikaani kodokeeles pruukjidõ osatähtsüs Lõunõ-Afriga Vabariigin.]]
 '''Afrikaani kiil''' (ka ''buuri kiil'', afrikaani keelen ''Afrikaans'') om [[hollandi kiil|hollandi keelest]] [[17. aastagasada|17.]]–[[18. aastagasada|18. aastagasaal]] vällä arõnuq [[germaani keeleq|germaani kiil]]. 
 
 Afrikaani kiil om üts [[Lõunõ-Afriga Vabariik|Lõunõ-Afriga Vabariigi]] ammõtliidsist keelist]|. Tä sai sääl ammõtligus keeles [[1925]]. aastagal.
