*Empty MediaWiki Message*

--- a/Lõunõ-Afriga_Vabariik.mw
+++ b/Lõunõ-Afriga_Vabariik.mw
@@ -1,6 +1,6 @@
 {{MaaInfokast|
-Nimi=Lõuna-Afriga Vabariik|
-Genitiiv=Lõuna-Afriga Vabariigi|
+Nimi=Lõunõ-Afriga Vabariik|
+Genitiiv=Lõunõ-Afriga Vabariigi|
 Lipp=Pilt:Flag of South Africa.svg|
 Vapp=Pilt:Coat of arms of South Africa.svg|
 Kaart=Pilt:LocationSouthAfrica.svg|
@@ -11,7 +11,7 @@ Rahvaarv= 49 320 000 (2009)|
 Internetitunnus=[[.za]]
 }}
 
-'''Lõuna-Afriga Vabariik''' om [[Afriga]] [[riik]]. Lõuna-Afriga Vabariigi pääliin om [[Pretoria]].
+'''Lõunõ-Afriga Vabariik''' om [[Afriga]] [[riik]]. Lõunõ-Afriga Vabariigi pääliin om [[Pretoria]].
 
 == Aolugu ==
 
@@ -32,6 +32,6 @@ Internetitunnus=[[.za]]
 {{commons|South Africa}}
 {{AfrigaMaaq}}
 
-[[Katõgooria:Lõuna-Afriga Vabariik| ]]
+[[Katõgooria:Lõunõ-Afriga Vabariik| ]]
 [[Katõgooria:Afriga riigiq]]
 [[Katõgooria:Afriga maaq]]
