*Empty MediaWiki Message*

--- a/Mandela_Nelson.mw
+++ b/Mandela_Nelson.mw
@@ -2,18 +2,18 @@
  | nimi = Mandela Nelson
  | pilt = Nelson Mandela-2008 (edit).jpg
  | sünnüaig = [[18. hainakuu päiv]] [[1918]]
- | sünnüpaik = [[Mvezo]], [[Lõuna-Afriga Vabariik]]
+ | sünnüpaik = [[Mvezo]], [[Lõunõ-Afriga Vabariik]]
  | kuulmisaig = [[5. joulukuu päiv]] [[2013]]
- | kuulmispaik = [[Johannesburg]], Lõuna-Afriga Vabariik
+ | kuulmispaik = [[Johannesburg]], Lõunõ-Afriga Vabariik
  | matmispaik = 
  | ammõt = poliitik
  }}
-'''Mandela Nelson''' ('''Nelson Rolihlahla Mandela''', 1918-2013) oll' [[Lõuna-Afriga Vabariik|Lõuna-Afriga Vabariigi]] edimäne demokraatlidsõlt valit president. Tä pidi tuud ammõtit 1994-1999.
+'''Mandela Nelson''' ('''Nelson Rolihlahla Mandela''', 1918-2013) oll' [[Lõunõ-Afriga Vabariik|Lõunõ-Afriga Vabariigi]] edimäne demokraatlidsõlt valit president. Tä pidi tuud ammõtit 1994-1999.
 
-Inne presidendis valimist oll' tä [[apartheid]]ivastadsõ liikmisõ aktivist. 1962. aastagal panti tä vangi, sinnäq jäi tä 27 aastagas.  Vangin olõmisõ aigu sai täst apartheidivastatsõ võitlusõ sümbol. Peräst vabassaamist 11. radokuu pääväl 1990 propagiirsõ tä ärqlepmispoliitikat, miä tegi lihtsämbäs üleminegi demokraatlidsõlõ riigikõrralõ. Tä valiti presidendis edimäidsil vapol valimiisil Lõuna-Afriga Vabariigin 27. mahlakuu pääväl 1994. Tollõn ammõtin oll' tä 1999. aastagani.
+Inne presidendis valimist oll' tä [[apartheid]]ivastadsõ liikmisõ aktivist. 1962. aastagal panti tä vangi, sinnäq jäi tä 27 aastagas.  Vangin olõmisõ aigu sai täst apartheidivastatsõ võitlusõ sümbol. Peräst vabassaamist 11. radokuu pääväl 1990 propagiirsõ tä ärqlepmispoliitikat, miä tegi lihtsämbäs üleminegi demokraatlidsõlõ riigikõrralõ. Tä valiti presidendis edimäidsil vapol valimiisil Lõunõ-Afriga Vabariigin 27. mahlakuu pääväl 1994. Tollõn ammõtin oll' tä 1999. aastagani.
 
 {{commons|Nelson Mandela}}
 
 
-[[Katõgooria:Lõuna-Afriga Vabariigi inemiseq]]
-[[Katõgooria:Lõuna-Afriga Vabariigi poliitiguq]]
+[[Katõgooria:Lõunõ-Afriga Vabariigi inemiseq]]
+[[Katõgooria:Lõunõ-Afriga Vabariigi poliitiguq]]
