*Empty MediaWiki Message*

--- a/Leedu.mw
+++ b/Leedu.mw
@@ -5,7 +5,7 @@ Lipp=Image:Flag of Lithuania.svg|
 Vapp'=Image:Coat of Arms of Lithuania.svg|
 Tunnuslausõq=Vienybė težydi|
 Kaart=Image:LocationLithuania.png|
-Riigikiil'=[[leedu kiil']]|
+Riigikiil'=[[leedu kiil]]|
 Pääliin=[[Vilnius]]|
 Riigitüübi pää=President'|
 Riigipää=[[Dalia Grybauskaitė]]|
