--- a/Kambodža.mw
+++ b/Kambodža.mw
@@ -13,7 +13,7 @@ Internetitunnus=[[.kh]]
 
 '''Kambodža Kuningriik''' om [[riik]] Lõunõhummogu-[[Aasia]]n. Kambodža [[pääliin]] om [[Phnom Penh]]. 
 
-== Aolugu ==
+Do piče jděte
 
 == Poliitiga ==
 
