--- a/Albaania_kiil.mw
+++ b/Albaania_kiil.mw
@@ -1,8 +1,8 @@
-'''Albaania kiil''' (''gjuha shqipe'', ''shqip'') kuulus [[indoõuruupa kiilkund|indoõuruupa kiilkunda]] ja om sääl umaette keelerühm.  Lähäbmat sugulust tõisi indoõuruupa keelerühmiga olõ-õi lövvet. 
+'''Albaania kiil''' (''gjuha shqipe'', ''shqip'') kuulus [[indoõuruupa keeleq|indoõuruupa kiilkunda]] hulka ja om sääl umaette keelerühm.  Lähäbmat sugulust tõisi indoõuruupa keelerühmiga olõ-õi lövvet. 
 
 [[Albaania]]n (3,3 mill'onat kõnõlõjat) ja [[Kosovo]]n (2 mill'onat kõnõlõjat) om albaania kiil riigikeelek. 
 
-Suur hulk kõnõlõjut eläs ka [[Montenegro]]n ja [[Serbiä]]n (kokko ligi 1 mill'on), [[Makõdoonia]]n (700 000), [[Kreeka]]n (140 000), [[Türgü]]n (300 000) ja [[Itaalia]]n (90 000). 
+Suur hulk kõnõlõjit eläs ka [[Montenegro]]n ja [[Serbiä]]n (kokko ligi 1 mill'on), [[Makõdoonia]]n (700 000), [[Kreeka]]n (140 000), [[Türgü]]n (300 000) ja [[Itaalia]]n (90 000). 
 
 Kokko om kõnõlõjit umbõs 6-8 mill'onat inemist.
 
