*Empty MediaWiki Message*

--- a/Albaania_kiil.mw
+++ b/Albaania_kiil.mw
@@ -2,7 +2,7 @@
 
 [[Albaania]]n (3,3 mill'onat kõnõlõjat) ja [[Kosovo]]n (2 mill'onat kõnõlõjat) om albaania kiil riigikeelek. 
 
-Suur hulk kõnõlõjit eläs ka [[Montenegro]]n ja [[Serbiä]]n (kokko ligi 1 mill'on), [[Makõdoonia]]n (700 000), [[Kreeka]]n (140 000), [[Türgü]]n (300 000) ja [[Itaalia]]n (90 000). 
+Suur hulk kõnõlõjit eläs ka [[Montõnegro]]n ja [[Serbiä]]n (kokko ligi 1 mill'on), [[Makõdoonia]]n (700 000), [[Kreeka]]n (140 000), [[Türgü]]n (300 000) ja [[Itaalia]]n (90 000). 
 
 Kokko om kõnõlõjit umbõs 6-8 mill'onat inemist.
 
