--- a/Kass.mw
+++ b/Kass.mw
@@ -1,4 +1,5 @@
 [[Pilt:JulesStanding2.JPG|200px|thumb|right]]
+[[File:Oczy kota domowego -Aw58-.JPG|thumb|200px]]
 
 '''Kass''' (''Felis catus'') om [[kodoelläi]]. Tä või ollaq väega [[karv]]anõ, a tä või ollaq ka ilma karvulda. 
 
