*Empty MediaWiki Message*

--- a/Buenos_Aires.mw
+++ b/Buenos_Aires.mw
@@ -11,6 +11,7 @@
 
 '''Buenos Aires''' om [[Argentina]] [[pääliin]].
 
+{{Commons|Buenos Aires}}
 [[Katõgooria:Argentina liinaq]]
 [[Katõgooria:Lõunõ-Ameeriga riike pääliinaq]]
 [[Katõgooria:Pääliinaq]]
