The file [[:Image:Coat_of_Arms_of_Latgale.svg]] has been replaced by [[:Image:Coat_of_arms_of_Latgale.svg]] by administrator [[:commons:User:Steinsplitter]]: ''[[commons:COM:FR|File renamed]]: [[commons:COM:FR#reasons|File renaming criterion #6]]: Harm...

--- a/Latgale.mw
+++ b/Latgale.mw
@@ -1,4 +1,4 @@
-[[Pilt:Coat of Arms of Latgale.svg|thumb|150px|Latgale vapp]]
+[[Pilt:Coat_of_arms_of_Latgale.svg|thumb|150px|Latgale vapp]]
 [[Pilt:Latvijas_novadi.PNG|thumb|390px|Läti kultuuripiirkunnaq ja liinaq. Kaardi sinine jago om Latgale.]]
 
 '''Latgale''' ([[latgali kiil|latgali keelen]] ''Latgola'') om üts [[Läti]] neläst suurõst aoluulidsõst ja kultuuripiirkunnast. Tä om Hummogu-Lätin ja sääl ommaq mitmõq as'aq tõistmuudu ku muial Lätin. Muuhulgan kõnõldas sääl umma kiilt - [[latgali kiil]]t. 
