--- a/Prantsusmaa.mw
+++ b/Prantsusmaa.mw
@@ -9,7 +9,7 @@
 |Pääliin           = [[Pariis]]
 |Riigitüübi pää    = President'
 |Riigipää          = [[François Hollande]]
-|Pääministri       = [[Jean-Marc Ayrault]]
+|Pääministri       = [[Manuel Valls]]
 |Suurus            = 674 843
 |Suurusõ perrä     = 42
 |Vett              =
