--- a/Elevandiluurand.mw
+++ b/Elevandiluurand.mw
@@ -2,7 +2,7 @@
 Nimi= Elevandiluurand|
 Genitiiv= Elevandiluuranna|
 Lipp=Pilt:Flag of Cote d'Ivoire.svg|
-Vapp=Pilt:Coat of Arms of Côte d'Ivoire.svg|
+Vapp=Pilt:Coat_of_arms_of_Côte_d'Ivoire.svg|
 Kaart=Pilt:LocationCotedIvoire.svg|
 Riigikiil=[[prantsusõ kiil]]|
 Pääliin=[[Yamoussoukro]]|
