The file [[:Image:Bhutan_emblem.svg]] has been replaced by [[:Image:Emblem_of_Bhutan.svg]] by administrator [[:commons:User:Marcus Cyron]]: ''[[commons:COM:FR|File renamed]]: [[commons:COM:FR#reasons|File renaming criterion #6]]: Harmonize file names o...

--- a/Bhutan.mw
+++ b/Bhutan.mw
@@ -2,7 +2,7 @@
 Nimi=Bhutan|
 Genitiiv=Bhutani|
 Lipp=Pilt:Flag of Bhutan.svg|
-Vapp=Pilt:Bhutan emblem.svg|
+Vapp=Pilt:Emblem_of_Bhutan.svg|
 Kaart=Pilt:Bhutan in its region.svg|
 Riigikiil=[[dzongkha kiil]]|
 Pääliin=[[Thimphu]]|
