The file [[:Image:Yuen_Dynasty_1294.png]] has been replaced by [[:Image:Yuan_Dynasty_1294.png]] by administrator [[:commons:User:Ymblanter]]: ''[[commons:COM:FR|File renamed]]: sp.''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Yuani_dünastia.mw
+++ b/Yuani_dünastia.mw
@@ -1,4 +1,4 @@
-[[Pilt:Yuen Dynasty 1294.png|200px|thumb|Yuani dünastia u. 1294. a.]]
+[[Pilt:Yuan_Dynasty_1294.png|200px|thumb|Yuani dünastia u. 1294. a.]]
 
 '''Yuani dünastia''' vai '''Suur Yuani riik''' oll' nii [[Mongoli riik|Mongoli riigi]] jakk ku mongolidõ luud riik parhilladsõn [[Mongoolia]]n ja [[Hiina]]n aastagil 1271-1368.
 
