*Empty MediaWiki Message*

--- a/Liechtenstein.mw
+++ b/Liechtenstein.mw
@@ -2,7 +2,7 @@
 Nimi=Fürstentum Liechtenstein|
 Genitiiv=Liechtensteini|
 Lipp=Image:Flag of Liechtenstein.svg|
-Vapp'=Image:National Coat of arms of Liechtenstein.svg|
+Vapp'=Image:Staatswappen-Liechtensteins.svg|
 Tunnuslausõq=olõ-i|
 Kaart=Image:LocationLiechtenstein.png|
 Riigikiil'=[[s'aksa kiil]]|
