--- a/Batman.mw
+++ b/Batman.mw
@@ -36,3 +36,7 @@ Filmen ommaq ''Batman''i mäng´nüq Keatoni Michael (Michael Keaton), Kilmeri V
 * [http://en.wikipedia.org Inglüsekeeline Vikipeediä]
 * [http://et.wikipedia.org Eestikeeline Vikipeediä]
 * [http://ru.wikipedia.org Vinnekeeline Vikipeediä]
+
+[[en: Batman]]
+[[et: Batman]]
+[[ru: Бэтмен]]
