http://webcache.googleusercontent.com/search?q=cache:FfnueZJbUqoJ:www.jaaaar.eu/sonad.php%3Fid%3D31+&cd=1&hl=et&ct=clnk&gl=ee

--- a/Jää_hääl.mw
+++ b/Jää_hääl.mw
@@ -1,4 +1,4 @@
-"Jää hääl" (''Jää helü'') om ansambli [[Jäääär]] kolmas [[kasett|helükasett]], miä linti võetu ja vällä antu 1992.-93. a. Kaseti 14 luust 6. (A-poolõ perämine) om Põldsaarõ A. võrokeelidside sõnnoga ''Kallimb, tuul pääväl, ku sa' mu' tapat''. Viietegijäs on märgitu Tüüri Erkki-Sven, laul Söödi Jaan. Kaseti välläandja X-Music.
+"Jää hääl" (''Jää helü'') om ansambli [[Jäääär]] kolmas [[kasett|helükasett]], miä linti võetu ja vällä antu 1992.-93. a. Kaseti 14 luust 6. (A-poolõ perämine) om Põldsaarõ Anneli võrokeelidside sõnnoga ''Kallimb, tuul pääväl, ku sa' mu' tapat''. Viietegijäs on märgitu Tüüri Erkki-Sven, laul Söödi Jaan. Kaseti välläandja X-Music.
 
 ==Lauluq==
 ===A-puul´===
@@ -7,7 +7,7 @@
 #"Kui joonistad lund" (Sibula Riho, Kanguri Villu)
 #"Vägisi viltu veab" (Söödi Jaan, Kanguri Villu)
 #"Hallid kardinad" (Söödi Jaan, Lintropi Aado)
-#"Kallimb, tuul pääväl ku sa' mu' tapat" (Tüüri Erkki-Sven, Põldsaarõ A.)
+#"Kallimb, tuul pääväl ku sa' mu' tapat" (Tüüri Erkki-Sven, Põldsaarõ Anneli)
 ===B-puul´===
 #"B Hommik" (Rootsmäe Andrus, Rootsmäe Andrus)
 #"Palavik" (Sibula Riho, Rootsmäe Andrus)
