--- a/Õdagumeresoomõ_keeleq.mw
+++ b/Õdagumeresoomõ_keeleq.mw
@@ -2,8 +2,7 @@
 
 '''Õdagumeresoomõ keeleq''' om rühm [[soomõ-ugri keeleq|soomõ-ugri kiili]], midä kõnõldas põhilidsõlt [[Õdagumeri|Õdagumere]] piirkunnan. 
 
-==Lõunõrühm==
-Õdagumeresoomõ kiili lõunõrühmä kuulusõq [[liivi kiil|liivi]], [[eesti kiil|eesti]], [[vad'a kiil|vad'a]] ja [[lõunaeesti kiil|lõunõeesti]] kiil, sh [[võro kiil]] ja [[seto kiil]]. Lõunõeesti kiilt om traditsioonilidsõlt peet eesti keele murdõrühmäs.
+Very nice site!
 
 ==Põh'arühm==
 Õdagumeresoomõ kiili põh'arühmä kuulusõq [[soomõ kiil|soomõ]], [[ingerikar'ala kiil|ingerikar'ala]] vai isuri, [[kar'ala kiil|kar'ala]] ja [[vepsä kiil]]. Sagõhõhe peetäs eräle õdagumeresoomõ keelis ka [[aunusõkar'ala kiil|aunusõkar'ala]] vai livvi ja [[lüüdi kiil|lüüdi]] kiilt, a mõnikõrd ka Roodsin ammõtligult veidembüskeeles tunnistõdut [[meä kiil|meä]] kiilt (''meänkieli'') ja Norran niisama ammõtligult veidembüskeeles tunnistõdut [[kveeni kiil|kveeni]] kiilt (''kainun kieli'').
