--- a/Kambodža.mw
+++ b/Kambodža.mw
@@ -2,7 +2,7 @@
 Nimi=Kambodža|
 Genitiiv=Kambodža|
 Lipp=Pilt:Flag of Cambodia.svg|
-Vapp=Pilt:Royal Arms of Cambodia.svg|
+Vapp=Pilt:Coat_of_arms_of_Cambodia.svg|
 Kaart=Pilt:LocationCambodia.svg|
 Riigikiil=[[khmeri kiil]]|
 Pääliin=[[Phnom Penh]]|
